@@ -1,3 +1,4 @@
+using System;
 using System.ComponentModel;
 using System.Drawing;
 using System.Windows.Forms;
@@ -10,5 +11,41 @@ namespace cYo.Projects.ComicRack.Viewer
 		{
 			InitializeComponent();
 		}
-	}
+
+        private Rectangle safeBounds;
+
+        public Rectangle SafeBounds
+        {
+            get
+            {
+                return safeBounds;
+            }
+            set
+            {
+                base.StartPosition = FormStartPosition.Manual;
+                base.Bounds = value;
+                safeBounds = value;
+            }
+        }
+
+        protected override void OnResizeEnd(EventArgs e)
+        {
+            base.OnResizeEnd(e);
+            UpdateSafeBounds();
+        }
+
+        protected override void OnMove(EventArgs e)
+        {
+            base.OnMove(e);
+            UpdateSafeBounds();
+        }
+
+        private void UpdateSafeBounds()
+        {
+            if (base.IsHandleCreated && base.WindowState == FormWindowState.Normal && base.FormBorderStyle != 0)
+            {
+                safeBounds = base.Bounds;
+            }
+        }
+    }
 }
